app/assets/stylesheets/welcome.scss
// Place all the styles related to the Welcome controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  line-height: 1.5;
}

.topnav {
  overflow: hidden;
  background-color: #F5F5F5;
  position: fixed;
  width: 100%;
}

// .clearfix fixes the float issue
.clearfix:after {
    content: ".";
    display: block;
    clear: both;
    visibility: hidden;
    height: 0;
    line-height: 0;
}

.topnav a {
  float: left;
  color: red;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 20px;
}

.topnav a:hover {
  transition: background-color 0.5s ease;
  color: black;
}

.topnav a.active {
  color: black;
}

.col {
  display: inline-block;
  width: 40%;
}

a#logo-link {
  position: absolute;
  right: 575px;
  color: black;
  font-weight: 600;
  span#logo_the {
    color: red;
    font-weight: 100;
  }
  span#cow {
    color: #8B4513;

  }
}

.categories {
  width: 100%;
  height: 100vh;
}

.img-css {
  background-size: cover;
  width: 100%;
  height: 100%;
}

#breakfast_img {
  background-image: url("/assets/breakfast.jpg");
}

#lunch_img {
  background-image: url("/assets/lunch4.jpg");
}

#dinner_img {
  background-image: url("/assets/dinner.jpg");
}

#salad_sides_img {
  background-image: url("/assets/salad1.jpg");
}

#desserts_img {
  background-image: url("/assets/desserts.jpg");
}

#category_padding {
  padding-top: 60px;
  padding-bottom: 15px;
}

.meal_lable a {
  text-decoration: none;
  padding-top: 200px;
}

.img-text{
  font-size: 25px;
  position: relative;
  left: 100px;
  top: 100px;
  color: red;

}

